tests/ui/attributes/crate-name-macro-call.stderr
error[E0539]: malformed `crate_name` attribute input
  --> $DIR/crate-name-macro-call.rs:4:1
   |
LL | #![crate_name = concat!("my", "crate")]
   | ^^^^^^^^^^^^^^^^----------------------^
   | |               |
   | |               expected a string literal here
   | help: must be of the form: `#![crate_name = "name"]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
